2007-05-24  Ankit Jain  <jankit@novell.com>

	* SolutionMakefileHandler.cs (Deploy): Emit an empty initializer for
	EXTRA_DIST in makefiles for projects which have their own directory.
	Include project specific makefile only if required.
	* SimpleProjectMakefileHandler.cs (Deploy): Don't emit a project
	specific *.make file.

	* templates/Makefile.include (EXTRA_DIST): Use = instead of +=.
	* templates/Project.make.template: Remove the file and move contents .. 
	* templates/Makefile.am.project.template: .. here.
	* Makefile.am: Update.
	* MonoDevelop.Autotools.mdp: Update.

2007-05-24  Ankit Jain  <jankit@novell.com>
	    Raja R Harinath  <rharinath@novell.com>
	
	* SolutionMakefileHandler.cs (Deploy): If a project is in the same
	directory as the solution, then directly "include" the project specific
	makefile in the solution's Makefile.am .
	* SimpleProjectMakefileHandler.cs (Deploy): Treat all assembly
	references as globalReferencedFiles. Emit path relative to $(BUILD_DIR).
	Emit deploy-files path relative to project's directory.
	Emit project specific makefiles.
	* SolutionDeployer.cs: Normalize paths emitted.

	* AutotoolsContext.cs (AddGlobalReferencedFile): New.
	* Makefile.cs (Write): Write variables before the "content".
	* Makefile.am: Add new Project.make.template .
	* MonoDevelop.Autotools.mdp: Update.

	* templates/Makefile.include (EXTRA_DIST): Use += .
	(DISTCLEANFILES): Add $(BUILD_DIR)/* . 
	* templates/Makefile.am.project.template: Add placeholder for including
	project specific makefile. Move older contents to ..
	* templates/Project.make.template: .. here.

2007-05-22  Ankit Jain  <jankit@novell.com>
	    Raja R Harinath  <rharinath@novell.com>

	* SimpleProjectMakefileHandler.cs (Deploy): Emit resgen script name.
	Emit resourceId if required.
	* templates/Makefile.include, templates/Makefile.am: Several improvements.
	Added support for compiling resx resources with custom resource ids.

2007-05-19  Lluis Sanchez Gual <lluis@novell.com> 
