@@ -76,11 +76,6 @@
     <ProjectReference type="Project" localcopy="False" refto="MonoDevelop.DesignerSupport" />
     <ProjectReference type="Assembly" localcopy="False" refto="../../contrib/log4net.dll" />
   </References>
-  <GtkDesignInfo partialTypes="True" isWidgetLibrary="True">
-    <ExportedWidgets>
-      <Widget>MonoDevelop.Autotools.MakefileIntegrationFeatureWidget</Widget>
-    </ExportedWidgets>
-  </GtkDesignInfo>
   <MonoDevelop.Autotools.MakefileInfo IntegrationEnabled="True" RelativeMakefileName="./Makefile.am" BuildTargetName="" CleanTargetName="" SyncReferences="True" IsAutotoolsProject="True" RelativeConfigureInPath="../../">
     <ExcludedFiles>
       <File>./MonoDevelop.Autotools.addin.xml</File>
@@ -93,4 +88,9 @@
     <AsmRefVar Sync="True" Name="REFS" Prefix="-r:" />
     <ProjectRefVar Sync="True" Name="REFS" Prefix="-r:" />
   </MonoDevelop.Autotools.MakefileInfo>
+  <GtkDesignInfo partialTypes="True" isWidgetLibrary="True">
+    <ExportedWidgets>
+      <Widget>MonoDevelop.Autotools.MakefileIntegrationFeatureWidget</Widget>
+    </ExportedWidgets>
+  </GtkDesignInfo>
 </Project>
